[gd_scene load_steps=8 format=3 uid="uid://dv0sxuoqwvvvt"]

[ext_resource type="Script" path="res://scenes/levels/level_01.gd" id="1_b2qqn"]
[ext_resource type="PackedScene" uid="uid://ctm72syamdtu3" path="res://scenes/player.tscn" id="2_w6oef"]
[ext_resource type="Script" path="res://scripts/Network.gd" id="3_aihfh"]
[ext_resource type="PackedScene" uid="uid://b6vc6tnmg4sio" path="res://scenes/computer.tscn" id="4_rwupc"]
[ext_resource type="PackedScene" uid="uid://dyv7agf8jf0g1" path="res://scenes/front_desk.tscn" id="6_aqqgc"]
[ext_resource type="PackedScene" uid="uid://vjjkym5k13tc" path="res://scenes/ui.tscn" id="7_wbf0n"]
[ext_resource type="PackedScene" uid="uid://bql1bbnoeqg6f" path="res://scenes/tiles.tscn" id="8_pe6qr"]

[node name="TestScene" type="Node2D"]
script = ExtResource("1_b2qqn")

[node name="Player" parent="." instance=ExtResource("2_w6oef")]
position = Vector2(260, 215)

[node name="Network" type="Node" parent="."]
script = ExtResource("3_aihfh")

[node name="Computers" type="Node" parent="Network"]

[node name="computer" parent="Network/Computers" instance=ExtResource("4_rwupc")]
position = Vector2(533, 342)

[node name="computer2" parent="Network/Computers" instance=ExtResource("4_rwupc")]
position = Vector2(405, 342)

[node name="MaxVirusTimer" type="Timer" parent="Network"]
wait_time = 15.0
autostart = true

[node name="VirusTimer" type="Timer" parent="Network"]
wait_time = 3.0
autostart = true

[node name="Front Desk" parent="." instance=ExtResource("6_aqqgc")]
position = Vector2(845, 230)
line_interval = 2.0
max_clients = 2

[node name="UI" parent="." instance=ExtResource("7_wbf0n")]
z_index = 5
goal = 60

[node name="Tiles" parent="." instance=ExtResource("8_pe6qr")]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
text = "Get"

[connection signal="timeout" from="Network/MaxVirusTimer" to="Network" method="_on_max_virus_timer_timeout"]
[connection signal="timeout" from="Network/VirusTimer" to="Network" method="_on_virus_timer_timeout"]
